-added accepted papers link and panel -updated PC part

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
       <div id="about" class="lead" align="justify">
          <h1>About</h1>
          <p> The RecSys Challenge 2019 will be organized by <a href="http://www.trivago.com">trivago</a>, <a
-               href="https://www.tuwien.ac.at/">TU Wien</a>, <a href="http://www.en.poliba.it/">Polytechnic University of Bari</a>, and <a href="http://www.kit.edu/">Karlsruhe Institute of Technology</a>. trivago is a global
+               href="https://www.tuwien.ac.at/">TU Wien</a>, <a href="http://www.en.poliba.it/">Polytechnic University
+               of Bari</a>, and <a href="http://www.kit.edu/">Karlsruhe Institute of Technology</a>. trivago is a global
             hotel search platform focused on reshaping the way travelers search for and compare hotels, while enabling
             advertisers of hotels to grow their businesses by providing access to a broad audience of travelers via our
             websites and apps. trivago has established 55 localized platforms in over 190 countries and provides access
@@ -222,7 +223,7 @@
                   <th> Session </th>
                </tr>
                <tr>
-                  <td>09:00 <br/>-<br/> 09:30</td>
+                  <td>09:00 <br />-<br /> 09:30</td>
                   <td>
                      <strong>Workshop Opening</strong>:
                      <ul>
@@ -232,57 +233,65 @@
                   </td>
                </tr>
                <tr>
-                  <td>09:30 <br/>-<br/> 10:30</td>
+                  <td>09:30 <br />-<br /> 10:30</td>
                   <td>
                      <strong>Paper Session 1 (each 25+5’)</strong>:
                      <ul class="lead">
-                        <li>Boosting algorithms for session-based, context-aware recommender system in online travel domain. <i>Paweł Jankiewicz (LogicAI)</i></li>
-                        <li>Robust Contextual Models for In-Session Personalization. <i>Felipe Perez (Layer 6 AI)</i></li>                        
+                        <li>Boosting algorithms for session-based, context-aware recommender system in online travel
+                           domain. <i>Paweł Jankiewicz (LogicAI)</i></li>
+                        <li>Robust Contextual Models for In-Session Personalization. <i>Felipe Perez (Layer 6 AI)</i>
+                        </li>
                      </ul>
                   </td>
                </tr>
 
                <tr style="color:gray;">
-                  <td>10:30 <br/>-<br/> 11:00 </td>
-                  <td align="center"> <br/>Coffee Break <i>supported by Trivago</i></td>
+                  <td>10:30 <br />-<br /> 11:00 </td>
+                  <td align="center"> <br />Coffee Break <i>supported by Trivago</i></td>
                </tr>
                <tr>
-                  <td>11:00 <br/>-<br/> 12:30</td>
+                  <td>11:00 <br />-<br /> 12:30</td>
                   <td>
                      <strong>Paper Session 2 (each 25+5’)</strong>:
                      <ul class="lead">
-                        <li>Session-based Item Recommendation with Pairwise Features. <i>Zhe Wang (Meituan Dianping)</i></li>
+                        <li>Session-based Item Recommendation with Pairwise Features. <i>Zhe Wang (Meituan Dianping)</i>
+                        </li>
                         <li>A-HA: A Hybrid Approach for Hotel Recommendation. <i>Kung-Hsiang Huang (RosettaAI)</i></li>
-                        <li>Learning to Rank Hotels for Search and Recommendation from Session-based Interaction Logs and Meta Data. <i>Malte Ludewig (TU Dortmund)</i></li>                        
+                        <li>Learning to Rank Hotels for Search and Recommendation from Session-based Interaction Logs
+                           and Meta Data. <i>Malte Ludewig (TU Dortmund)</i></li>
                      </ul>
                   </td>
                </tr>
                <tr style="color:gray;">
-                  <td>12:30 <br/>-<br/> 14:00</td>
-                  <td align="center"> <br/>Lunch Break (lunch not provided) </td>
+                  <td>12:30 <br />-<br /> 14:00</td>
+                  <td align="center"> <br />Lunch Break (lunch not provided) </td>
                </tr>
                <tr>
-                  <td>14:00 <br/>-<br/> 15:30</td>
+                  <td>14:00 <br />-<br /> 15:30</td>
                   <td>
                      <strong>Paper Session 3 (each 15+5’)</strong>:
                      <ul class="lead">
-                        <li>An Attentive RNN Model for Session-based and Context-aware Recommendations: A Solution to the RecSys Challenge 2019. <i>Ricardo Gama (Polytechnic Institute of Viseu) and Hugo Fernandes (Rockets of Awesome)</i></li>
-                        <li>Leveraging laziness, Browsing-Pattern Aware Stacked Models for Sequential Accommodation Learning to Rank. <i> Federico Piccinini (Politecnico di Milano)</i></li>
+                        <li>An Attentive RNN Model for Session-based and Context-aware Recommendations: A Solution to
+                           the RecSys Challenge 2019. <i>Ricardo Gama (Polytechnic Institute of Viseu) and Hugo
+                              Fernandes (Rockets of Awesome)</i></li>
+                        <li>Leveraging laziness, Browsing-Pattern Aware Stacked Models for Sequential Accommodation
+                           Learning to Rank. <i> Federico Piccinini (Politecnico di Milano)</i></li>
                         <li>Accelerating Recommender System Training 15x with RAPIDS. <i>Even Oldridge (NVidia)</i></li>
-                        <li>A Pipelined Hybrid Recommender System for Ranking the Items on the Display. <i>Jaehoon Oh (KAIST)</i></li>
+                        <li>A Pipelined Hybrid Recommender System for Ranking the Items on the Display. <i>Jaehoon Oh
+                              (KAIST)</i></li>
                      </ul>
                   </td>
                </tr>
                <tr style="color:gray;">
-                  <td>15:30 <br/>-<br/> 16:00</td>
-                  <td align="center"> <br/>Coffee Break </td>
+                  <td>15:30 <br />-<br /> 16:00</td>
+                  <td align="center"> <br />Coffee Break </td>
                </tr>
                <tr>
-                  <td>16:00 <br/>-<br/> 17:30</td>
+                  <td>16:00 <br />-<br /> 17:30</td>
                   <td>
                      <strong>Panel: What did we learn from the RecSys Challenge’19?</strong>:
                      <ul class="lead">
-                        <li>Speakers tbd</li>                        
+                        <li>Speakers tbd</li>
                      </ul>
                   </td>
                </tr>
@@ -292,6 +301,18 @@
                </tr>
             </tbody>
          </table>
+         <h1>Accepted Papers<sup><a class="dropup" style="font-size:10px;" href="#top"><span class="caret"></span>
+                  top</a></sup></h1>
+         <a href="https://drive.google.com/drive/folders/12S4-oOJV4onS2WV9nsv-5qaWPtlt3t7q">This link</a> is temporarily
+         and will be soon replaced with official DOI of the proceedings + slides for presentation. Stay tuned!
+         <h1>Discussion Panel<sup><a class="dropup" style="font-size:10px;" href="#top"><span class="caret"></span>
+                  top</a></sup></h1>
+         <ul>
+            <li>Jens Adamczak (trivago)</li>
+            <li>Paweł Jankiewicz (Logic AI)</li>
+            <li>Felipe Perez (Layer 6 AI)</li>            
+         </ul>
+         Moderation: Peter Knees (TU Wien)
       </div>
 
       <!-- ORGANIZERS -->
@@ -304,8 +325,8 @@
             <li>Himan Abdollahpouri, University of Colorado Boulder, USA</li>
             <li>Marko Tkalcic, Free University of Bozen-Bolzano, Italy</li>
             <li>Julia Neidhardt, Vienna University of Technology, Austria</li>
-            <li>David Zibriczky, trivago, Germany</li>
-            <li>Massimo Quadrana, Pandora, Denmark</li>
+            <li>David Zibriczky, DB Schenker, Germany</li>
+            <li>Massimo Quadrana, Pandora, USA</li>
             <li>Andreu Vall, Johannes Kepler University, Austria</li>
             <li>Dietmar Jannach, University of Klagenfurt, Austria</li>
             <li>Alejandro Bellogin, Universidad Autonoma de Madrid, Spain</li>
@@ -313,7 +334,7 @@
             <li>Mehdi Elahi, Free University of Bozen-Bolzano, Italy</li>
             <li>Dimitris Sacharidis, Vienna University of Technology, Austria</li>
             <li>Hamed Zamani, University of Massachusetts Amherst, USA</li>
-            <li>Vito Walter Anelli, Politecnico di Bari, Italy</li>            
+            <li>Vito Walter Anelli, Politecnico di Bari, Italy</li>
             <li>Mete Sertkan, Vienna University of Technology, Austria</li>
             <!-- <li>Jens	Adamczak, trivago, Germany</li> -->
             <!-- <li>Philipp	Monreal, trivago, Germany</li> -->
@@ -347,7 +368,7 @@
                   target="\_blank">Mehdi Elahi</a>, Free University of Bozen, Bolzano</li>
          </ul>
       </div>
-      <!-- /.container --> 
+      <!-- /.container -->
       <!-- JavaScript -->
       <script src="./js/jquery-1.11.3.min.js"></script>
       <script src="./js/bootstrap.min.js"></script>
@@ -360,10 +381,10 @@
       </script>
       <script>
          (function (i, s, o, g, r, a, m) {
-         i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-         }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+               (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+               m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
          })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
          ga('create', 'UA-70716117-1', 'auto');
          ga('send', 'pageview');
