added panel part

--- a/index.html
+++ b/index.html
@@ -237,9 +237,13 @@
                   <td>
                      <strong>Paper Session 1 (each 25+5’)</strong>:
                      <ul class="lead">
-                        <li><a href="https://drive.google.com/file/d/1SOoO0vBYXEpE6-1MY0MYNBvCQnQRjp5_/view?usp=sharing">Boosting algorithms for session-based, context-aware recommender system in online travel
-                           domain.</a> <i>Paweł Jankiewicz (LogicAI)</i></li>
-                        <li><a href="https://drive.google.com/file/d/1WxJ9ggLE3UkOUcWJq98wRjg4mg1dBV6s/view?usp=sharing">Robust Contextual Models for In-Session Personalization.</a> <i>Felipe Perez (Layer 6 AI)</i>
+                        <li><a
+                              href="https://drive.google.com/file/d/1SOoO0vBYXEpE6-1MY0MYNBvCQnQRjp5_/view?usp=sharing">Boosting
+                              algorithms for session-based, context-aware recommender system in online travel
+                              domain.</a> <i>Paweł Jankiewicz (LogicAI)</i></li>
+                        <li><a
+                              href="https://drive.google.com/file/d/1WxJ9ggLE3UkOUcWJq98wRjg4mg1dBV6s/view?usp=sharing">Robust
+                              Contextual Models for In-Session Personalization.</a> <i>Felipe Perez (Layer 6 AI)</i>
                         </li>
                      </ul>
                   </td>
@@ -254,11 +258,17 @@
                   <td>
                      <strong>Paper Session 2 (each 25+5’)</strong>:
                      <ul class="lead">
-                        <li><a href="https://drive.google.com/file/d/1AlCfM3Sz4SIg-9MPPwaauhORjsVfztSF/view?usp=sharing">Session-based Item Recommendation with Pairwise Features.</a> <i>Zhe Wang (Meituan Dianping)</i>
+                        <li><a
+                              href="https://drive.google.com/file/d/1AlCfM3Sz4SIg-9MPPwaauhORjsVfztSF/view?usp=sharing">Session-based
+                              Item Recommendation with Pairwise Features.</a> <i>Zhe Wang (Meituan Dianping)</i>
                         </li>
-                        <li><a href="https://drive.google.com/file/d/1SsnLJyDCEQimRJWGXi4ziLJezXnG2t1q/view?usp=sharing">A-HA: A Hybrid Approach for Hotel Recommendation.</a> <i>Kung-Hsiang Huang (RosettaAI)</i></li>
-                        <li><a href="https://drive.google.com/file/d/1UQSuw-9DQ-xDq5_h-0b3n4oIGE6A7RAo/view?usp=sharing">Learning to Rank Hotels for Search and Recommendation from Session-based Interaction Logs
-                           and Meta Data.</a> <i>Malte Ludewig (TU Dortmund)</i></li>
+                        <li><a
+                              href="https://drive.google.com/file/d/1SsnLJyDCEQimRJWGXi4ziLJezXnG2t1q/view?usp=sharing">A-HA:
+                              A Hybrid Approach for Hotel Recommendation.</a> <i>Kung-Hsiang Huang (RosettaAI)</i></li>
+                        <li><a
+                              href="https://drive.google.com/file/d/1UQSuw-9DQ-xDq5_h-0b3n4oIGE6A7RAo/view?usp=sharing">Learning
+                              to Rank Hotels for Search and Recommendation from Session-based Interaction Logs
+                              and Meta Data.</a> <i>Malte Ludewig (TU Dortmund)</i></li>
                      </ul>
                   </td>
                </tr>
@@ -271,13 +281,22 @@
                   <td>
                      <strong>Paper Session 3 (each 15+5’)</strong>:
                      <ul class="lead">
-                        <li><a href="https://drive.google.com/file/d/1R5LGJgbOkSDCB_dbXZg8-elMhVEbhiVD/view?usp=sharing">An Attentive RNN Model for Session-based and Context-aware Recommendations: A Solution to
-                           the RecSys Challenge 2019.</a> <i>Ricardo Gama (Polytechnic Institute of Viseu) and Hugo
+                        <li><a
+                              href="https://drive.google.com/file/d/1R5LGJgbOkSDCB_dbXZg8-elMhVEbhiVD/view?usp=sharing">An
+                              Attentive RNN Model for Session-based and Context-aware Recommendations: A Solution to
+                              the RecSys Challenge 2019.</a> <i>Ricardo Gama (Polytechnic Institute of Viseu) and Hugo
                               Fernandes (Rockets of Awesome)</i></li>
-                        <li><a href="https://drive.google.com/file/d/1FzNc3-3InOsLmNve2ZrQp_wQuMcKdiAz/view?usp=sharing">Leveraging laziness, Browsing-Pattern Aware Stacked Models for Sequential Accommodation
-                           Learning to Rank.</a> <i> Federico Piccinini (Politecnico di Milano)</i></li>
-                        <li><a href="https://drive.google.com/file/d/1hQmVwKGtyT3C7fdY4hwViIEMpmsf4kGC/view?usp=sharing">Accelerating Recommender System Training 15x with RAPIDS.</a> <i>Even Oldridge (NVidia)</i></li>
-                        <li><a href="https://drive.google.com/file/d/1LkxJ0HHsNGvjYZkL4KvVeftK4PPUqXNi/view?usp=sharing">A Pipelined Hybrid Recommender System for Ranking the Items on the Display.</a> <i>Jaehoon Oh
+                        <li><a
+                              href="https://drive.google.com/file/d/1FzNc3-3InOsLmNve2ZrQp_wQuMcKdiAz/view?usp=sharing">Leveraging
+                              laziness, Browsing-Pattern Aware Stacked Models for Sequential Accommodation
+                              Learning to Rank.</a> <i> Federico Piccinini (Politecnico di Milano)</i></li>
+                        <li><a
+                              href="https://drive.google.com/file/d/1hQmVwKGtyT3C7fdY4hwViIEMpmsf4kGC/view?usp=sharing">Accelerating
+                              Recommender System Training 15x with RAPIDS.</a> <i>Even Oldridge (NVidia)</i></li>
+                        <li><a
+                              href="https://drive.google.com/file/d/1LkxJ0HHsNGvjYZkL4KvVeftK4PPUqXNi/view?usp=sharing">A
+                              Pipelined Hybrid Recommender System for Ranking the Items on the Display.</a> <i>Jaehoon
+                              Oh
                               (KAIST)</i></li>
                      </ul>
                   </td>
@@ -291,7 +310,12 @@
                   <td>
                      <strong>Panel: What did we learn from the RecSys Challenge’19?</strong>:
                      <ul class="lead">
-                        <li>Speakers tbd</li>
+                        <ul>
+                           <li>Jens Adamczak (trivago)</li>
+                           <li>Paweł Jankiewicz (Logic AI)</li>
+                           <li>Felipe Perez (Layer 6 AI)</li>
+                        </ul>
+                        Moderation: Peter Knees (TU Wien)
                      </ul>
                   </td>
                </tr>
@@ -300,15 +324,7 @@
                   <td> <strong>Workshop closing</strong> </td>
                </tr>
             </tbody>
-         </table>      
-         <h1>Discussion Panel<sup><a class="dropup" style="font-size:10px;" href="#top"><span class="caret"></span>
-                  top</a></sup></h1>
-         <ul>
-            <li>Jens Adamczak (trivago)</li>
-            <li>Paweł Jankiewicz (Logic AI)</li>
-            <li>Felipe Perez (Layer 6 AI)</li>            
-         </ul>
-         Moderation: Peter Knees (TU Wien)
+         </table>         
       </div>
 
       <!-- ORGANIZERS -->
